--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@ Basic useful feature list:
  * Drag and drop a file into here to load it
  * File contents are saved in the URL so you can share files
 
+Sample emojis:
+<br>
+:) :( :| :/ :$ :@ :* 
 
 I'm no good at writing sample / filler text, so go write something yourself.
 
