--- a/index.html
+++ b/index.html
@@ -216,8 +216,6 @@ Sample emojis:
 <br>
 :) :( :| :/ :$ :@ :* 
 
-I'm no good at writing sample / filler text, so go write something yourself.
-
 Look, a list!
 
  * foo
@@ -232,18 +230,14 @@ $(function(){
 });
 ```
 
-This is [on GitHub](https://github.com/jbt/markdown-editor) so let me know if I've b0rked it somewhere.
-
-
-Props to Mr. Doob and his [code editor](http://mrdoob.com/projects/code-editor/), from which
-the inspiration to this, and some handy implementation hints, came.
-
-### Stuff used to make this:
+### Libraries and tools used:
 
  * [markdown-it](https://github.com/markdown-it/markdown-it) for Markdown parsing
  * [CodeMirror](http://codemirror.net/) for the awesome syntax-highlighted editor
  * [highlight.js](http://softwaremaniacs.org/soft/highlight/en/) for syntax highlighting in output code blocks
  * [js-deflate](https://github.com/dankogai/js-deflate) for gzipping of data to make it fit in URLs
+
+This project was forked from [jbt/markdown-editor](https://github.com/jbt/markdown-editor)
 </textarea></form></div>
   <div id="out"></div>
   <div id="menu">
